2014-April-22 Struan Robertson

	* MolecularComponents.cpp/.h: Update of GRIT algorithm to account for 
	the relative rotation of fragments.

2014-April-26 Chris Morley

	* src/System.cpp, src/System.h: allow multiple <control> blocks. Use
	separate flags for each one, but <molecules>, <reactions>, <parameters>
	and <conditions> are all common.

	* examples/i-propyl/ipropyl_2ContrBlks.xml: example file with fitting and
	 then Chebeshev output.

	* schemas/mesmer.xsd: update schema

2014-April-22 Struan Robertson

	* MolecularComponents.cpp: Fix for bug no. 13 "Internal rotation projection 
	vector incorrect".

2014-April-21 Struan Robertson

	* HinderedRotorQM1D.cpp, HinderedRotorCM1D.cpp, MolecularComponents.cpp/.h, 
	DensityOfStates.h: Initial implementation of GRIT.

2014-April-14 Struan Robertson

	* HinderedRotorQM1D.cpp, HinderedRotorCM1D.cpp, MolecularComponents.cpp/.h: 
	Altered in preparation for the addition the generalized rotational inertia
	tensor.

2014-April-08 Chris Morley

	* src/ConditionsManager.cpp, src/ConditionsManager.h: 
	Windows VC10/Mesmer/Mesmer.vcxprojAdd ConditionsManager class to
	reduce size of System class.

	* src/System.cpp, src/System.h, src/unitsConversion.h: Move conditionSet
	struct and CandTpair. Make CandTpair a struct since now accessed only
	from ConditionsManager.

	* src/plugins/SensitivityAnalysis.cpp: only external change.

2014-March-25 Chris Morley

	* src/plugins/MesmerILT.cpp,src/Reaction.cpp,src/Reaction.h,
	schemas/mesmerPlugins.xsd: Allow <me:ExcessReactantConcentration>
	to be read as a child of MesmerILT as well as a child of Reaction to
	be consistent with old and new XML styles.

	* schemas/CMLforMesmer.xsd: ref and id attributes to have the same
	required regex (brackets in molecule names are acceptable).

2014-March-06 Struan Robertson

	* HinderedRotorQM1D.cpp: Minor changes in order to improve convergence.

	* MESMER manual.docx: Condition specification section (7.3.3) updated.

2014-March-19 Chris Morley