@@ -1,4 +1,12 @@
-2014-April-22 Struan Robertson
+2014-April-29 Chris Morley
+	* src/plugins/HinderedRotorQM1D.cpp, src/plugins/HinderedRotorCM1D.cpp:
+	accept both "useSineTerms" and "UseSineTerms" and "yes", "true", "1" for
+	the positive value.
+
+	* src/TMatrix.h: extra #include <cstring> which might help Linux build.
+
+
+2014-April-27 Struan Robertson
 
 	* MolecularComponents.cpp/.h: Update of GRIT algorithm to account for 
 	the relative rotation of fragments.
